<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivAdminLogin"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:gravity="center"
            android:minHeight="?attr/actionBarSize"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:text="@string/user_login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp">

            <TableRow>

                <TextView
                    style="?android:textAppearanceSmall"
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:layout_weight="0.99"
                    android:text="@string/username"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/edUsername"
                    style="?android:textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_weight="0.99"
                    android:background="@drawable/shape_white_line"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    style="?android:textAppearanceSmall"
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:layout_weight="0.99"
                    android:text="@string/password"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow>

                <EditText
                    android:id="@+id/edPassword"
                    style="?android:textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_weight="0.99"
                    android:background="@drawable/shape_white_line"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/white"

                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_weight="0.99"
                    android:background="@color/buttonBackground"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />
            </TableRow>
            <TableRow>

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_weight="0.99"
                    android:background="@color/buttonBackground"
                    android:gravity="center"
                    android:text="@string/signup"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>


    </RelativeLayout>


</LinearLayout>
