<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:minHeight="?attr/actionBarSize"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:text=" User Registration"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">

                <TableRow>

                </TableRow>

                <TableRow>

                    <TextView
                        style="?android:textAppearanceSmall"
                        android:layout_width="0.0dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_margin="5dp"
                        android:layout_weight="0.99"
                        android:text="@string/fullname"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold"/>

                </TableRow>

                <TableRow>

                    <EditText
                        android:id="@+id/edFullName"
                        style="?android:textAppearanceSmall"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.99"
                        android:background="@drawable/shape_white_line"
                        android:inputType="text"
                        android:padding="5dp"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold"/>
                </TableRow>
                <TableRow>

                    <TextView
                        style="?android:textAppearanceSmall"
                        android:layout_width="0.0dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_margin="5dp"
                        android:layout_weight="0.99"
                        android:text="@string/email"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold"/>

                </TableRow>

                <TableRow>

                    <EditText
                        android:id="@+id/edEmails"
                        style="?android:textAppearanceSmall"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.99"
                        android:background="@drawable/shape_white_line"
                        android:inputType="text"
                        android:padding="5dp"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold"/>
                </TableRow>
                <TableRow>

                    <TextView
                        style="?android:textAppearanceSmall"
                        android:layout_width="0.0dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_margin="5dp"
                        android:layout_weight="0.99"
                        android:text="@string/username"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold"/>

                </TableRow>

                <TableRow>

                    <EditText
                        android:id="@+id/edUsername"
                        style="?android:textAppearanceSmall"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.99"
                        android:background="@drawable/shape_white_line"
                        android:inputType="text"
                        android:padding="5dp"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold"/>
                </TableRow>
                <TableRow>
                    <TextView
                        style="?android:textAppearanceSmall"
                        android:layout_width="0.0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.99"
                        android:layout_margin="5dp"
                        android:layout_centerInParent="true"
                        android:text="@string/password"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold"/>

                </TableRow>
                <TableRow>

                        <EditText
                            android:id="@+id/edPassword"
                            style="?android:textAppearanceSmall"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.99"
                            android:background="@drawable/shape_white_line"
                            android:inputType="textPassword"
                            android:padding="5dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/colorAccent"
                            android:textSize="18dp"
                            android:textStyle="bold"/>
                </TableRow>

                <TableRow>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0.0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="0.99"
                        android:textColorHint="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                style="?android:textAppearanceLarge"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:text="IMEI NUmber"
                                android:textColor="@color/white"
                                android:textColorHint="@color/colorAccent"
                                android:textSize="12dp"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/tvIMEI"
                                style="?android:textAppearanceSmall"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/shape_white_line"
                                android:padding="5dp"
                                android:textColor="@color/white"
                                android:textColorHint="@color/colorAccent"
                                android:textSize="18dp"
                                android:textStyle="bold"/>
                        </LinearLayout>
                    </com.google.android.material.textfield.TextInputLayout>
                </TableRow>
                <TableRow>
                    <TextView
                        style="?android:textAppearanceSmall"
                        android:layout_width="0.0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.99"
                        android:layout_margin="5dp"
                        android:layout_centerInParent="true"
                        android:text="@string/phone"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:textStyle="bold"/>

                </TableRow>
                <TableRow>
                        <EditText
                            android:id="@+id/edPhone"
                            style="?android:textAppearanceSmall"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.99"
                            android:background="@drawable/shape_white_line"
                            android:inputType="number"
                            android:maxLength="10"
                            android:padding="5dp"
                            android:textColor="@color/white"
                            android:textSize="18dp"
                            android:textStyle="bold"/>
                </TableRow>
                <TableRow>

                    <Button
                        android:id="@+id/btnAssign"
                        android:layout_width="0.0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_weight="0.99"
                        android:background="@color/buttonBackground"
                        android:gravity="center"
                        android:text="Sign up"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"/>
                </TableRow>
            </TableLayout>

        </ScrollView>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />
    </RelativeLayout>


</LinearLayout>
